Used a single class and resolved more dark mode text issues

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -456,7 +456,7 @@ input[type="checkbox"] {
   }
 }
 .modal-pattern-name {
-  color: #333;
+  color: var(--color-secondary-dark);
   text-align: center;
   font-weight: 800;
   font-size: 12px;
@@ -510,6 +510,7 @@ input[type="checkbox"] {
   padding-bottom: 0px;
 }
 .modal-pattern-id {
+  color: var(--color-secondary-dark);
   position: absolute;
 	bottom: 0;
 	font-size: 8px;
