--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -19,21 +19,10 @@
     }
 }
 
-.updated{
-    color: var(--color-secondary-dark);
-}
-
-.version{
-    color: var(--color-secondary-dark);
-}
-
-.version_no{
-    color: var(--color-secondary-dark);
-}
-
 .post-date{
     color: var(--color-secondary-dark);
 }
+
 .anchor {
     position: relative;
 }
